--- a/Project/style/styleMain.css
+++ b/Project/style/styleMain.css
@@ -92,11 +92,14 @@ img {
 
 .MainTitle_1 {
     font-size: 3vw;
+    line-height: 50PX;
 }
 .MainTitle_2 {
     font-size: 3vw;
+    line-height: 50PX;
 }
-.MainTitle_3 {
+.MainTitle_3 {    
+    line-height: 50PX;
     font-size: 3vw;
 }
 
