--- a/Project/style/styleMain.css
+++ b/Project/style/styleMain.css
@@ -91,25 +91,17 @@ img {
 }
 
 .MainTitle_1 {
-    font-size: 3vw;
-    line-height: 50PX;
-}
-.MainTitle_2 {
-    font-size: 3vw;
-    line-height: 50PX;
-}
-.MainTitle_3 {    
-    line-height: 50PX;
-    font-size: 3vw;
+    font-size: 4vw;
+    line-height: 4.5vw;
 }
 
 .start {
     position: absolute;
     width: 12%;
     height: 3vw;
-    margin-top: 23%;
+    margin-top: 24%;
     margin-left: 44%;
-    font-size: 1.9vw;
+    font-size: 1.5vw;
     color: #FFFFFF;
     box-shadow: 2px 4px 7px -1px rgb(0 0 0 / 25%);
     border-radius: 100px;
@@ -121,6 +113,7 @@ img {
     text-decoration: none;
     cursor: pointer;
     z-index: 4;
+    padding-top: 0.7vw;
 }
 
 .steps4 {
