--- a/Project/style/addrecipe.css
+++ b/Project/style/addrecipe.css
@@ -4,15 +4,15 @@
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    font-family: 'PT Sans Narrow', sans-serif;
+    font-family: 'PT Sans', sans-serif;
 }
 img {
     pointer-events: none;
 }
 ::-webkit-scrollbar {
     background: rgba(209, 121, 17, 0.16);
-    width: 10px;
-    height: 10px;
+    width: 5px;
+    height: 5px;
 }
 ::-webkit-scrollbar-track {
     border: 1px solid transparent;
@@ -60,7 +60,7 @@ body {
     color: #5c5c5c;
     font-family: 'PT Sans', sans-serif;
 }
-.linkImg {
+.linkimg {
     height: 2vw;
 }
 .split {
@@ -77,10 +77,10 @@ body {
     background: rgba(255, 255, 255, 0.38);
 }
 .addName {
-    font-family: 'Roboto Condensed', sans-serif;
     font-size: 40px;
     text-align: center;
     padding-top: 30px;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 .name {
     margin-left: 20%;
@@ -98,7 +98,7 @@ body {
     height: 35px;
     border-radius: 6.75px;
     margin-top: 8px;
-    box-shadow: 0px 5.33145px 5.33145px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 5.33145px 5.33145px rgba(0, 0, 0, 0.10);
 }
 
 .description {
@@ -107,7 +107,7 @@ body {
     width: 63%;
 }
 .descriptionName {
-    font-size: 20px;
+    font-size: 18px;
     margin-left: 2.7%;
 }
 .inputdescription {
@@ -116,7 +116,7 @@ body {
     height: 145px;
     border-radius: 6.75px;
     margin-top: 8px;
-    box-shadow: 0px 5.33145px 5.33145px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 5.33145px 5.33145px rgba(0, 0, 0, 0.10);
 }
 
 .calories {
@@ -135,7 +135,7 @@ body {
     height: 35px;
     border-radius: 6.75px;
     margin-left: 12px;
-    box-shadow: 0px 5.33145px 5.33145px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 5.33145px 5.33145px rgba(0, 0, 0, 0.10);
 }
 
 .cookingTime {
@@ -154,7 +154,7 @@ body {
     height: 35px;
     border-radius: 6.75px;
     margin-left: 12px;
-    box-shadow: 0px 5.33145px 5.33145px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 5.33145px 5.33145px rgba(0, 0, 0, 0.10);
 }
 
 .kitchen {
@@ -202,7 +202,7 @@ body {
 
 .selectedProducts {
     width: 90%;
-    background: #F2F2F2;
+    background: #ffffff;
     border-radius: 6.75px;
     margin: 0 auto;
     margin-top: 8px;
@@ -269,7 +269,7 @@ body {
     margin: 0 auto;
     display: flex;
     margin-top: 8px;
-    background: #F2F2F2;
+    background: #ffffff;
     border-radius: 6.75px;
 }
 .suitableProductBox {
@@ -287,8 +287,6 @@ body {
     height: 105px;
     background: #CDCDCD;
     border-radius: 6.75px;
-    margin-right: 11px;
-    margin-bottom: 15px;
 }
 
 .kitckenUtensilsText {
@@ -315,7 +313,7 @@ body {
 }
 .selectedKitckenUtensils {
     width: 90%;
-    background: #F2F2F2;
+    background: #ffffff;
     border-radius: 6.75px;
     margin: 0 auto;
     margin-top: 8px;
@@ -366,23 +364,26 @@ body {
     font-size: 20px;
     line-height: 25.5px;
     text-align: center;
-    background: #BEBEBE;
+    background: gray;
     border-radius: 12.75px;
-    color: white;
-    margin-right: 3px;
+    color: #504D4D;
+    margin-right: 8px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
 }
 .stepContent {
     margin-top: 35px;
     width: 100%;
     height: 118px;
-    background: #F2F2F2;
+    background: #fbefec;
     border-radius: 6.75px;
     display: flex;
 }
 .stepBox {
     width: 28%;
-    background: #C4C4C4;
+    /* background: #ab8c8a; */
     border-radius: 6px;
+    border: solid 1px gray;
     height: 100px;
     margin-top: 9.5px;
     margin-left: 2%;
@@ -401,8 +402,8 @@ body {
 #selectStep {
     height: 11.25px;
     background: #E4E4E4;
-    border-radius: 2.25px;
-    border: 0;
+    border-radius: 5.25px;
+    border: none;
     font-size: 10px;
     width: 160%;
     text-align: center;
@@ -425,14 +426,16 @@ body {
     height: 80px;
     box-sizing: border-box;
 
-    font-size: 10px;
+    font-size: 14px;
     text-align: center;
     line-height: 80px;
 }
 .addStep {
-    width: 66%;
-    background: #CFCFCF;
-    border-radius: 9px;
+    width: 30%;
+    color: white;
+    background: #FF6B00;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(255, 255, 255, 0.25);
+    border-radius: 39px;
     margin: 0 auto;
     margin-top: 27px;
     height: 30px;
@@ -442,11 +445,12 @@ body {
     cursor: pointer;
 }
 .sendRecipe{
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    color: white;
     width: 20%;
-    background: #CFCFCF;
+    background: #ffea29;
     border-radius: 9px;
     margin: 0 auto;
     margin-top: 27px;
@@ -455,6 +459,8 @@ body {
     text-align: center;
     line-height: 30px;
     cursor: pointer;
+    text-shadow: 0px 1.33333px 4px rgb(0 0 0 / 25%);
+    border: none;
 }
 .indentStep {
     width: 100%;
@@ -480,13 +486,15 @@ body {
 #kitchen {
     border-radius: 5px;
     margin-left: 20px;
+    border: none;
+    text-align: center;
 }
 #otstup {
     padding-top: 15px;
 }
 footer {
     width: 100%;
-    background: #c4c4c4;
+    background: #FFFBF9;
     height: 70px;
     display: none;
 }
@@ -506,6 +514,104 @@ footer {
     text-align: center;
     line-height: 39px;
 }
+.nprod {
+    width: 105px;
+    text-align: center;
+    margin-bottom: 15px;
+    /* word-break: break-all; */
+    overflow-wrap: break-word;
+    display: block;
+    box-sizing: border-box;
+}
+.suitableNamePrd {
+    background: white;
+    margin-right: 30px;
+    border-radius: 7px;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 5.33145px rgba(0, 0, 0, 0.25);
+    /* border: solid 1px gray; */
+    margin-top: 5px;
+}
+#main-picture {
+    background: url(/images/inventoryImg/main.png) no-repeat top center;
+}
+#inventory-picture {
+    background: url(/images/inventoryImg/inventory.png) no-repeat top center;
+}
+#serch-picture {
+    background: url(/images/inventoryImg/serch.png) no-repeat top center;
+}
+#spisok-picture {
+    background: url(/images/inventoryImg/spisok-pokypok.png) no-repeat top center;
+}
+#profil-picture {
+    background: url(/images/inventoryImg/profil.png) no-repeat top center;
+}
+
+.ava_input__wrapper {
+    width: 260px;
+    position: relative;
+    margin-top: 10px;
+    text-align: center;
+}
+.ava_input__wrapper_2 {
+    width: 90%;
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 35px;
+}
+.ava_input__file-button_2 {
+    width: 100%;
+    height: 30px;
+    background: #f89a4c;
+    color: #fff;
+    font-size: 1.125rem;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    border-radius: 13px;
+    cursor: pointer;
+}
+.ava_input__file-button-text_2 {
+    line-height: 1;
+    padding-top: 0px;
+    font-size: 10px;
+}
+.ava_input__file {
+    opacity: 0;
+    position: absolute;
+}
+.ava_input__file-button {
+    width: 250px;
+    max-width: 70%;
+    height: 30px;
+    background: #f89a4c;
+    color: #fff;
+    font-size: 1.125rem;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    border-radius: 13px;
+    cursor: pointer;
+}
+.ava_input__file-icon-wrapper {
+    height: 30%;
+    width: 30%;
+    margin-right: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-right: 2px solid #fff;
+}
+.ava_input__file-button-text {
+    line-height: 1;
+    padding-top: 0px;
+    font-size: 12px;
+}
+
 
 @media screen and (max-width: 1200px) {
     .popularity {
@@ -518,6 +624,7 @@ footer {
 @media screen and (max-width: 1100px) {
     .select {
         width: 110px;
+        height: 27px;
     }
     .select select {
         width: 100px;
@@ -554,9 +661,11 @@ footer {
     }
     .textCalories {
         font-size: 15px;
+        line-height: 20px;
     }
     .textCookingTime {
         font-size: 15px;
+        line-height: 20px;
     }
     .textKitchen {
         font-size: 15px;
@@ -565,6 +674,16 @@ footer {
 @media screen and (max-width: 880px) {
     a {
         font-size: 10px;
+    }
+
+    .suitableNamePrd {
+        width: 80px;
+    }
+    .suitableProduct {
+        width: 80px;
+    }
+    .nprod {
+        width: 80px;
     }
 }
 @media screen and (max-width: 860px) {
@@ -589,12 +708,19 @@ footer {
     .inputStep {
         width: 57%;
     }
+    .popularity {
+        margin-left: 20%;
+    }
+}
+@media screen and (max-width: 825px) {
+    .suitableText {
+        line-height: 20px;
+    }
 }
 @media screen and (max-width: 800px) {
     .suitableProduct {
         width: 80px;
         height: 80px;
-        margin-right: 30px;
     }
     .main {
         margin: 0 auto;
@@ -630,17 +756,36 @@ footer {
         font-size: 12px;
     }
 }
+
+#main-pct {
+    background: url(/images/header/Безымянный-1-02\ 1.png) no-repeat top center;
+}
+#inv-pct {
+    background: url(/images/header/Безымянный-2-02\ 1.png) no-repeat top center;
+}
+#search-pct {
+    background: url(/images/header/Безымянный-3-02\ 2.png) no-repeat top center;
+}
+#spisok-pct {
+    background: url(/images/header/Безымянный-4-02\ 1.png) no-repeat top center;
+}
+#profil-pct {
+    background: url(/images/header/Безымянный-5-02\ 1.png) no-repeat top center;
+}
 @media screen and (max-width: 670px) {
     header {
         display: none;
     }
     footer {
         width: 100%;
-        background: #c4c4c4;
+        background: #FFFBF9;
         height: 70px;
         display: block;
         position: fixed;
         bottom: 0;
+    }
+    .sendRecipe{
+        bottom: 80px;
     }
 }
 @media screen and (max-width: 600px) {
