--- a/Project/style/inventory.css
+++ b/Project/style/inventory.css
@@ -4,7 +4,10 @@
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    font-family: 'PT Sans Narrow', sans-serif;
+    font-family: 'PT Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing:0.017em;
 }
 img {
     pointer-events: none;
@@ -23,7 +26,6 @@ img {
     border-radius: 20px;
 }
 body {
-    font-family: 'PT Sans Narrow', sans-serif;
     margin: 0;
     /* background-image: url(/images/inventoryImg/fon.jpg);
     background-repeat: repeat;
@@ -62,7 +64,7 @@ body {
     margin-top: 1%;
     margin-left: 4%;
     color: #5c5c5c;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'PT Sans Narrow', sans-serif;
 }
 .linkImg {
     height: 2vw;
@@ -83,53 +85,63 @@ body {
     margin-top: 20px;
 }
 .kichenText {
-    width: 46%;
-    font-size: 27px;
+    width: 100%;
+    font-size: 29px;
+    padding-left: 3%;
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 500;
+    letter-spacing: 0.017em;
 }
 .chosenText {
     width: 100%;
-    font-size: 18px;
+    font-size: 20px;
+    padding-left: 3%;
     margin-top: 1%;
 }
 .kichenUtensils {
     text-align: center;
     width: 100%;
-    margin-top: 2%;
+    margin-top: 1%;
 }
 .block {
     padding: 10px;
     display: flex;
     height: 205px;
     box-sizing: border-box;
-    overflow-x: scroll;
+    overflow-x: auto;
+    border-radius: 20px;
 }
-.kichenBlockY
-{
+.kichenBlockY { 
     margin-right: 2%;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 1.29236px 5.16943px rgb(0 0 0 / 25%);
+    background-color: white
 }
 .kichenBlock {
-    width: 140px;
-    height: 140px;
+    width: 135px;
+    height: 135px;
     border-radius: 20px;
     background: #EAE9E9;
     text-align: center;
     justify-content: center;
-    box-shadow: 0px 1.29236px 5.16943px rgba(0, 0, 0, 0.25);
-    margin-bottom: 5px;
 }
 .text {
     font-size: 15px;
 }
 .addListBlock {
     width: 100%;
-    margin-top: 4%;
+    margin-top: 2%;
 }
 .addNameBlock {
     width: 100%;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .addName {
-    width: 18%;
+    width: 30%;
 }
 .popularity {
     display: flex;
@@ -138,13 +150,12 @@ body {
 .addSearchSringBlock {
     height: 100%;
     box-sizing: border-box;
-    margin-right: 5px;
+    margin-right: 25px;
     display: flex;
 }
 .addSearchSring {
     height: 20px;
     margin-top: 4px;
-    border-radius: 15px;
 }
 .search-btn {
     width: 30px;
@@ -157,9 +168,9 @@ body {
 }
 .select {
     position: relative;
-    background: rgba(255, 171, 45, 0.68);
-    border-radius: 15px;
+    border-radius: 6px;
     font-size: 12px;
+    background: #FFC052;
 }
 .select select {
     background: none;
@@ -178,37 +189,45 @@ body {
 }
 .addKichenUtensils {
     width: 100%;
-    margin-top: 3%;
+    height: 490px;
+    margin-top: 1%;
     background-color: #fff;
+    border-radius: 20px;
 }
 .addKichenBlockL {
     margin: 10px;
     margin-bottom: 20px;
+    background-color: white;
+    height: 220px;
+    width: 170px;
+    border-radius: 20px;
+    box-shadow: 0px 1.29236px 5.16943px rgb(0 0 0 / 25%);
 }
 .addKichenBlock {
-    min-width: 170px;
-    max-width: 170px;
-    height: 170px;
-    border-radius: 20px;
-    background: #EAE9E9;
+    width: 90%;
+    height: 160px;
+    margin: auto;
     text-align: center;
     justify-content: center;
-    box-shadow: 0px 1.29236px 5.16943px rgba(0, 0, 0, 0.25);
-
 }
 .addBlock {
     display: flex;
     box-sizing: border-box;
     margin-bottom: 2%;
     flex-wrap: wrap;
+    height: 100%;
+    overflow-y: auto;
+    width: 95%;
+    margin-left: 5%;
 }
 .addText {
     font-size: 18px;
 }
 .addKichenUtensil {
     text-align: center;
-    width: 100%;
+    width: 90%;
     margin-top: 5%;
+    padding: 0 5% 5% 5%;
 }
 footer {
     width: 100%;
@@ -241,6 +260,9 @@ footer {
 @media screen and (max-width: 1200px) {
     .addBlock {
         justify-content: center;
+    }
+    .main {
+        width: 85%;
     }
 }
 @media screen and (max-width: 1100px) {
@@ -279,12 +301,30 @@ footer {
     header {
         display: none;
     }
+    .main {
+        width: 90%;
+        margin-top: 40px;
+    }
 
     .addSearchSring {
         width: 100px;
-        display: none;
     }
-
+    .addKichenUtensils {
+        height: 610px;
+    }
+    .addKichenBlockL {
+        margin: 10px;
+        margin-bottom: 20px;
+        height: 150px;
+        width: 120px;
+    }
+    .addKichenBlock {
+        width: 90%;
+        height: 90px;
+    }
+    .addText {
+        font-size: 14px;
+    }
     .search-btn {
         width: 20px;
         height: 20px;
@@ -299,8 +339,8 @@ footer {
         width: 100%;
     }
     .kichenBlock {
-        width: 85px;
-        height: 85px;
+        width: 100px;
+        height: 100px;
         border-radius: 20px;
         background: #EAE9E9;
         text-align: center;
@@ -310,36 +350,11 @@ footer {
         display: flex;
         height: 160px;
         box-sizing: border-box;
-        overflow-x: scroll;
-    }
-    footer {
-        width: 100%;
-        background: #c4c4c4;
-        height: 70px;
-        display: block;
-        position: fixed;
-        bottom: 0;
-    }
-}
-@media screen and (max-width: 600px) {
-    .addKichenBlock {
-        min-width: 140px;
-        height: 140px;
-    }
-    .addText {
-        font-size: 15px;
-    }
-    .select {
-        position: relative;
-        background: rgba(255, 171, 45, 0.68);
-        border-radius: 15px;
-        font-size: 8px;
-        width: 140px;
     }
 }
 @media screen and (max-width: 550px) {
     .chosenText {
-        font-size: 10px;
+        font-size: 14px;
         margin-top: 1%;
     }
     .addText {
@@ -356,11 +371,6 @@ footer {
         text-align: center;
         line-height: 33px;
     }
-    footer {
-        height: 55px;
-        position: fixed;
-        bottom: 0;
-    }
     .fmenuBlock {
         margin-left: 13px;
     }
@@ -370,5 +380,19 @@ footer {
         min-width: 100px;
         height: 100px;
         border-radius: 20px;
+    }
+    .select select {
+        padding: 10px;
+        width: 100%;
+    }
+    .select {
+        font-size: 10px;
+        width: 50%;
+    }
+    .popularity {
+        margin-left: 20%;
+    }
+    .addSearchSringBlock {
+        margin-right: 8px;
     }
 }
