--- a/Project/style/styleHeader.css
+++ b/Project/style/styleHeader.css
@@ -65,6 +65,18 @@
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%), inset 0px 4px 4px rgb(255 255 255 / 25%);
 }
 
+.btnHeader2{
+    width: 50%;
+    height: 50%;
+    font-size: 1.1vw;
+    color: #5C5C5C;
+    font-family: 'PT Sans', sans-serif;
+    text-align: center;
+    text-decoration: none;
+    box-sizing: border-box;
+    padding-top: 2%;
+    margin-left: 5%;
+}
 .profile {
     width: 2vw;
     height: 2vw;
