--- a/Project/style/styleMain.css
+++ b/Project/style/styleMain.css
@@ -10,17 +10,18 @@ img {
     pointer-events: none;
 }
 ::-webkit-scrollbar {
-    background: rgba(209, 121, 17, 0.16);
-    width: 10px;
-    height: 10px;
+    background: rgb(141, 97, 75);
+    width: 7px;
+    height: 7px;
+    z-index: 10;
 }
 ::-webkit-scrollbar-track {
-    border: 1px solid transparent;
+    border: 0px solid transparent;
     background-clip: content-box;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: #FFA96A;
-    border-radius: 20px;
+    background-color: #ff9c46;
+    border-radius: 5px;
 }
 
 .fonKitchen {
@@ -372,7 +373,7 @@ img {
     text-align: center;
     color: #FFFFFF;
     font-family: 'Roboto Condensed', sans-serif;
-    font-size: 4vw;
+    font-size: 3vw;
     font-style: normal;
     font-weight: 700;
     text-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
