--- a/Project/style/styleHeader.css
+++ b/Project/style/styleHeader.css
@@ -15,7 +15,8 @@
     justify-content: space-evenly;
     align-items: center;
     width: 90%;
-    margin: auto;
+    margin-top: auto;
+    margin-left: 2.2%;
     height: 3vw;
 }
 
@@ -69,18 +70,31 @@
     width: 50%;
     height: 50%;
     font-size: 1.1vw;
-    color: #5C5C5C;
+    color: #a5a5a5;
     font-family: 'PT Sans', sans-serif;
     text-align: center;
     text-decoration: none;
     box-sizing: border-box;
     padding-top: 2%;
-    margin-left: 5%;
 }
+
+.nameheader{
+    width: 50%;
+    height: 50%;
+    font-size: 1.1vw;
+    color: #101010;
+    font-family: 'PT Sans', sans-serif;
+    text-align: center;
+    text-decoration: none;
+    box-sizing: border-box;
+    margin-left: 15%;
+    margin-top: 3%;
+}
+
 .profile {
     width: 2vw;
     height: 2vw;
     filter: drop-shadow(0px 1.33333px 5.33333px rgba(0, 0, 0, 0.25));
-
+    margin-left: 5%;
     border-radius:100%;
 }
