--- a/Project/style/styleMenu.css
+++ b/Project/style/styleMenu.css
@@ -58,7 +58,7 @@
         position: fixed;
         background-color: #ffffff;
         width: 38vw;
-        height: 100%;
+        height: 100vw;
         right: 0;
         overflow: auto;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
