--- a/Project/style/styleHeader.css
+++ b/Project/style/styleHeader.css
@@ -98,3 +98,9 @@
     margin-left: 5%;
     border-radius:100%;
 }
+
+@media screen and (max-width: 800px) {
+    header {
+        display: none;
+    }
+}
